Feature: Add authentication.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,8 +30,9 @@
         "ts": "never"
       }
     ],
+    // "@typescript-eslint/camelcase": "off",
     "prettier/prettier": "error",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
   },
   "settings": {
     "import/resolver": {
