--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,9 +30,9 @@
         "ts": "never"
       }
     ],
-    // "@typescript-eslint/camelcase": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
+    "@typescript-eslint/camelcase": "off"
   },
   "settings": {
     "import/resolver": {
